--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         position: absolute;
         margin: 0 5px;
         bottom: 0%;
+        top: 110%;
+        display: block;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
